--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/Front-end/node_modules
+/Back-end/node_modules
 
 # testing
-/coverage
+/Front-end/coverage
 
 # production
-/build
+/Front-end/build
 
 # misc
 .DS_Store
