--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "recompose": "^0.26.0"
+    "recompose": "^0.26.0",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
